# turbocrawler-control

./: Makefile  docker-compose.yml  pyproject.toml
tests/: test.py
tests/test_crawlers/: quotes_crawler.py
turbocrawler_control/: __main__.py  fastapi_app.py  main.py  settings.py
turbocrawler_control/application/crawler/: crawler_error.py  crawler_service.py
turbocrawler_control/application/execution/: execution_error.py  execution_service.py
turbocrawler_control/application/scheduled_execution/: scheduled_execution_error.py  scheduled_execution_service.py
turbocrawler_control/data/db_orm/: connection.py  init_db.py  query_obj.py
turbocrawler_control/data/db_orm/tables/: __init__.py  tbl_crawlers.py  tbl_executions.py  tbl_logs.py  tbl_scheduled_executions.py
turbocrawler_control/data/dtos/: crawlers_dto.py  executions_dto.py  scheduled_execution_dto.py
turbocrawler_control/data/errors/: repository_error.py  sql_error.py
turbocrawler_control/data/repository/: crawlers_repository.py  executions_repository.py  logs_repository.py  scheduled_executions_repository.py
turbocrawler_control/domain/: crawler.py  execution.py  scheduled_execution.py
turbocrawler_control/plugin/: plugin.py
turbocrawler_control/presentation/cli/: main.py
turbocrawler_control/presentation/endpoints/: crawler.py  execution.py  home.py
turbocrawler_control/presentation/schemas/: crawler_schema.py
turbocrawler_control/presentation/templates/: execution.html  home.html
