[tool.poetry]
name = "turbocrawler-control"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
SQLAlchemy = "*"
mysql-connector-python = "*"
turbocrawler = "*"
jinja2 = "*"
typer = "^0.12.0"



[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
